--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
         rm[random(3, parseInt)] = 1 / (1 + pow(E, tan(random * pi - pi / 2)));
         var r24 = 24 * random;
         random(true, .3 + d) && (steps = fillArr(12 * random + 1, () => r24 + random));
-        random(true, 1 / rous) && rous++ && random(true, rous / 100) && (lct.hash = z) && lct.reload(true);
+        random(true, 1 / rous) && rous++ && random(true, rous / 100) && (lct.hash = z) && lct.reload();
       }
 
       var o0 = ['🌝', '🌕'];
