--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-	<svg style="color: #000;transition: all .2s;" viewbox="-500 -500 1000 1000" version="1.1" xmlns="http://www.w3.org/2000/svg"
+	<svg style="color: #000;transition: all .2s;transform: scaleY(-1);" viewbox="-500 -500 1000 1000" version="1.1" xmlns="http://www.w3.org/2000/svg"
 	 xmlns:xlink="http://www.w3.org/1999/xlink">
 		<defs>
 			<mask id="mask">
